refactor: [BE] move common dtos to common module + [FE] add base admin pages